configs/stunner/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: stunner-gatewayclass
spec:
  controllerName: "stunner.l7mp.io/gateway-operator"
  parametersRef:
    group: "stunner.l7mp.io"
    kind: GatewayConfig
    name: stunner-gatewayconfig
    namespace: stunner
  description: "STUNner is a WebRTC ingress gateway for Kubernetes"
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: tls-gateway
  namespace: stunner
spec:
  gatewayClassName: stunner-gatewayclass
  listeners:
      # This listener will be visible for everyone outside of the cluster
    - name: tls-listener
      port: 443
      protocol: TLS
      # Use the secret what is created at the beginning of the Installation guide.
      tls:
        certificateRefs:
          - kind: Secret
            name: nexhe-ssl
            namespace: stunner
        mode: Terminate
