configs/stunner/lk-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: lk-stunner-gatewayclass
spec:
  controllerName: "stunner.l7mp.io/gateway-operator"
  parametersRef:
    group: "stunner.l7mp.io"
    kind: GatewayConfig
    name: lk-stunner-gatewayconfig
    namespace: lk-stunner
  description: "STUNner is a WebRTC ingress gateway for Kubernetes"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: lk-tls-gateway
  namespace: lk-stunner
spec:
  gatewayClassName: lk-stunner-gatewayclass
  listeners:
    - name: lk-tls-listener
      port: 443
      protocol: TLS
      tls:
        certificateRefs:
          - kind: Secret
            name: meetmo-cluster-ssl
            namespace: lk-stunner
        mode: Terminate
